# learn-opengl

./: .travis.yml  404.html  Cargo.toml  README.md  book.toml  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.cargo/: config
.github/workflows/: pages.yml  pages.yml.backup
appendix-math/: index.html  matrices.html  transform.html  vectors.html
basics/: 000-creating-a-window.html  001-drawing-a-triangle.html  002-triangle-cleanup.html  003-rectangle.html  index.html
book-src/: SUMMARY.md  introduction.md
book-src/appendix-math/: index.md  matrices.md
book-src/basics/: 000-creating-a-window.md  001-drawing-a-triangle.md  002-triangle-cleanup.md  003-rectangle.md  creating-a-window.md  index.md
examples/: 000-basic-window.rs  001-triangle-arrays1.rs  002-triangle-arrays2.rs  003-rectangle-elements.rs  004-shader-basics.rs  004-shader-pipeline.rs  005-shader-uniforms.rs  006-more-attributes.rs  007-textures.rs  008-color-mixing.rs  009-texture-units.rs  010-transforms-intro.rs  011-coordinate-basics.rs  012-depth-buffer-cube.rs  013-multi-cube.rs  014-mouse-look.rs  015-fps-movement.rs  hello-window.rs
src/: lib.rs  math.rs
