[package]
name = "learn-opengl"
description = "LearnOpenGL.com lessons in Rust"
repository = "https://github.com/Lokathor/learn-opengl"
version = "0.0.1-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib"

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0-alpha.2", features = ["debug_error_checks"]}#, "debug_trace_messages"]}
beryllium = "0.2.0-alpha.3"
imagine = "0.0.4"

[dev-dependencies]
ultraviolet = "0.3"
